2006-07-14  Nurdin Premji  <npremji@redhat.com>

	* src/java/com/redhat/ftk/EventViewer.java (ftk_eventviewer_set_bg_default): Added.
	(setBackgroundDefault): Added.
	* src/jni/com_redhat_ftk_EventViewer.c Added support for setting background 
	using default colors.
	* src/widgets/ftkeventviewer.c Added support for setting background using default colors
	* src/widget/ftkeventviewer.h Added headers for support for setting background using 
	default colors.

2006-07-14  Chris Moller  <moller@mollerware.com>

	* src/widgets/ftkeventviewer.c:
	* src/widgets/ftkeventviewer.h: Added copyright statements.

2006-07-13  Nurdin Premji  <npremji@redhat.com>

	* src/java/com/redhat/ftk/SimultaneousEvent.java: Added java-gnome
	license 
	* src/java/com/redhat/ftk/EventPair.java: Added java-gnome license

2006-07-12  Nurdin Premji  <npremji@redhat.com>

	* src/java/com/redhat/ftk/SimultaneousEvent.java: Ran GNU Formatter.
	* src/java/com/redhat/ftk/EventPair.java: Added.
	* src/java/com/redhat/ftk/EventViewer.java
	(ftk_eventviewer_tie_event_array): Added. 
	(ftk_eventviewer_delete_trace): Added.
	* src/widgets/ftkeventviewer.c:
	Added accessibility information, and some pretty comments that show
	what each portion of the widget code looks like.

2006-07-10  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (EventViewer.o): Add $(srcdir) to include path.
	(SimultaneousEvent.o): Likewise.

2006-07-08  Chris Moller  <moller@mollerware.com>

	* src/widgets/ftkeventviewer.c:
	* src/widgets/ftkeventviewer.h: Added a time readout to the
	tooltip types, added a button to center all available data in the
	display, added controls to allow the mouse wheel to scroll
	multiple traces up and down, control-mouse wheel increases and
	decreases the display interval, and shift-mouse wheel scrolls the
	traces left and right.

2006-07-07  Chris Moller  <moller@mollerware.com>

	* src/widgets/ftkeventviewer.c:
	* src/widgets/ftkeventviewer.h: Moved the legend out of the