@@ -87,12 +87,14 @@ CLEANFILES += com/redhat/ftk/EventViewer.class \
 #	$(GCJ) -C -d . -classpath $(FRYSK_GTK_CLASSPATH) $(SRC)
 #com/redhat/ftk/StripchartX.class: $(tlwidgetssrc)/java/com/redhat/ftk/StripchartX.java
 #	$(GCJ) -C -d . -classpath $(FRYSK_GTK_CLASSPATH) $(SRC)
-com/redhat/ftk/EventViewer.class: $(tlwidgetssrc)/java/com/redhat/ftk/EventViewer.java com/redhat/ftk/SimultaneousEvent.class com/redhat/ftk/EventPair.class
+com/redhat/ftk/EventPair.class: $(tlwidgetssrc)/java/com/redhat/ftk/EventPair.java
 	$(GCJ) -C -d . -classpath $(FRYSK_GTK_CLASSPATH) $(SRC)
 com/redhat/ftk/SimultaneousEvent.class: $(tlwidgetssrc)/java/com/redhat/ftk/SimultaneousEvent.java
 	$(GCJ) -C -d . -classpath $(FRYSK_GTK_CLASSPATH) $(SRC)
-com/redhat/ftk/EventPair.class: $(tlwidgetssrc)/java/com/redhat/ftk/EventPair.java
+com/redhat/ftk/EventViewer.class: $(tlwidgetssrc)/java/com/redhat/ftk/EventViewer.java
 	$(GCJ) -C -d . -classpath $(FRYSK_GTK_CLASSPATH) $(SRC)
+
+
 
 #ftk.jar: com/redhat/ftk/Stripchart.class \
 #         com/redhat/ftk/StripchartX.class \
@@ -116,10 +118,6 @@ ftk.jar: com/redhat/ftk/EventViewer.class \
 #	$(GCJ) -fjni -classpath $(FRYSK_GTK_CLASSPATH) -I ./src/java \
 #            -g -O2 -fPIC -c $< -o $@
 
-EventViewer.o: $(tlwidgetssrc)/java/com/redhat/ftk/EventViewer.java SimultaneousEvent.o EventPair.o
-	$(GCJ) -fjni -classpath $(FRYSK_GTK_CLASSPATH) -I $(srcdir)/src/java -I ./ \
-            -g -O2 -fPIC -c $< -o $@
-
 SimultaneousEvent.o: $(tlwidgetssrc)/java/com/redhat/ftk/SimultaneousEvent.java
 	$(GCJ) -fjni -classpath $(FRYSK_GTK_CLASSPATH) -I $(srcdir)/src/java \
             -g -O2 -fPIC -c $< -o $@
@@ -128,11 +126,15 @@ EventPair.o: $(tlwidgetssrc)/java/com/redhat/ftk/EventPair.java
 	$(GCJ) -fjni -classpath $(FRYSK_GTK_CLASSPATH) -I ./src/java \
             -g -O2 -fPIC -c $< -o $@
 
+EventViewer.o: $(tlwidgetssrc)/java/com/redhat/ftk/EventViewer.java 
+	$(GCJ) -fjni -classpath $(FRYSK_GTK_CLASSPATH) -I $(srcdir)/src/java -I ./ \
+            -g -O2 -fPIC -c $< -o $@
+
 #libftkjava.so: Stripchart.o StripchartX.o EventViewer.o SimultaneousEvent.o
 #	$(GCJ) -shared $^ $(FRYSK_GTK_LIBS) \
 #		-Wl,-soname -Wl,libftkjava.so -o $@
 
-libftkjava.so: EventViewer.o SimultaneousEvent.o EventPair.o
+libftkjava.so:  SimultaneousEvent.o EventPair.o EventViewer.o
 	$(GCJ) -shared $^ $(FRYSK_GTK_LIBS) \
 		-Wl,-soname -Wl,libftkjava.so -o $@
 
